--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,28 @@
   "dependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
-    "@mui/icons-material": "*",
-    "@mui/material": "*",
+    "@mantine/core": "^7.8.0",
+    "@mantine/dates": "^7.8.0",
+    "@mantine/form": "^7.8.0",
+    "@mantine/hooks": "^7.8.0",
+    "@mantine/styles": "^6.0.21",
+    "@mantinex/dev-icons": "^1.0.2",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.78",
+    "@types/react-dom": "^18.2.25",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
-    "react-router-dom": "*"
+    "react-router-dom": "*",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "*",
     "@testing-library/dom": "*",
+    "@testing-library/jest-dom": "*",
     "@testing-library/react": "*",
     "@testing-library/user-event": "*",
+    "@types/css-modules": "^1.0.5",
     "@vitejs/plugin-react": "*",
     "@vitest/coverage-v8": "*",
     "bestzip": "*",
@@ -31,6 +41,10 @@
     "eslint-plugin-react-refresh": "*",
     "jsdom": "*",
     "msw": "*",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-mantine": "^1.14.4",
+    "postcss-simple-vars": "^7.0.1",
     "vite": "*",
     "vite-plugin-eslint": "*",
     "vitest": "*"
