--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slug-sync-backend",
   "version": "2.0.0",
-  "description": "CSE186 Assignment 8 - Backend",
+  "description": "slug sync - Backend",
   "author": "David Harrison <dcharris@ucsc.edu>",
   "license": "UNLICENSED",
   "repository": "none",
