--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cse186-assignment8",
+  "name": "slug-sync",
   "version": "3.0.0",
-  "description": "CSE186 Assignment 8",
+  "description": "Slug sync",
   "author": "David Harrison <dcharris@ucsc.edu>",
   "license": "UNLICENSED",
   "repository": "none",
@@ -15,7 +15,7 @@
     "start-frontend": "cd frontend && npm run dev",
     "install-e2e": "cd e2e && npm install",
     "start": "(npm run start-backend) & (npm run start-frontend)",
-    "zip": "bestzip Assignment8.Submission.zip e2e/tests/* frontend/src/* backend/sql/* backend/src/* backend/api/*",
+    "zip": "bestzip SlugSync.Submission.zip e2e/tests/* frontend/src/* backend/sql/* backend/src/* backend/api/*",
     "postinstall": "(npm run install-backend) && (npm run install-frontend) && (npm run install-e2e)"
   }
 }
