--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "@mantine/hooks": "^7.8.0",
     "@mantine/styles": "^6.0.21",
     "@mantinex/dev-icons": "^1.0.2",
+    "@mantinex/mantine-logo": "^1.0.1",
+    "@tabler/icons-react": "^3.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.78",
     "@types/react-dom": "^18.2.25",
     "prop-types": "*",
     "react": "*",
@@ -32,6 +33,7 @@
     "@testing-library/react": "^15.0.4",
     "@testing-library/user-event": "^14.5.2",
     "@types/css-modules": "^1.0.5",
+    "@types/react": "^18.2.79",
     "@vitejs/plugin-react": "*",
     "@vitest/coverage-v8": "*",
     "bestzip": "*",
