--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,5 +21,5 @@
       "@test-utils": ["./test-utils"]
     }
   },
-  "include": ["src", "test-utils", "global.d.ts"]
+  "include": ["src", "test-utils", "global.d.ts", "jsconfig.json"]
 }
