--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/react-dom": "^18.2.25",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
@@ -27,6 +29,8 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.2",
@@ -36,6 +40,7 @@
     "@types/react": "^18.2.79",
     "@vitejs/plugin-react": "*",
     "@vitest/coverage-v8": "*",
+    "babel-loader": "^9.1.3",
     "bestzip": "*",
     "eslint": "*",
     "eslint-config-google": "*",
@@ -51,7 +56,9 @@
     "puppeteer": "^22.7.0",
     "vite": "*",
     "vite-plugin-eslint": "*",
-    "vitest": "^1.5.0"
+    "vitest": "^1.5.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "build": "vite build",
