- Add a central hub for dashboard page - Add login context - Add unauthorized page

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "license": "UNLICENSED",
   "repository": "none",
   "devDependencies": {
-    "eslint": "*",
+    "eslint": "^v8.57.0",
     "eslint-config-google": "*",
     "jest": "*",
     "nodemon": "*",
