--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/react-dom": "^18.2.25",
+    "feather-icons": "^4.29.1",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-feather": "^2.0.10",
     "react-router-dom": "*",
     "typescript": "^5.4.5"
   },
