--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-feather": "^2.0.10",
     "react-router-dom": "*",
     "typescript": "^5.4.5"
   },
