Frontend tests passing, backend/e2e tests wip

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "start": "(npm run start-backend) & (npm run start-frontend)",
     "zip": "bestzip SlugSync.Submission.zip e2e/tests/* frontend/src/* backend/sql/* backend/src/* backend/api/*",
     "postinstall": "(npm run install-backend) && (npm run install-frontend) && (npm run install-e2e)"
+  },
+  "dependencies": {
+    "@types/react-dates": "^21.8.6"
   }
 }
