--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/react-dom": "^18.2.25",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "prop-types": "*",
@@ -57,7 +58,7 @@
     "puppeteer": "^22.7.0",
     "vite": "*",
     "vite-plugin-eslint": "*",
-    "vitest": "^1.5.0",
+    "vitest": "^1.6.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
